examples/test/testpolicy19739.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19739
  namespace: namespace428
spec:
  podSelector:
    matchLabels:
      key46: value44
      key6: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value2
          key28: value11
          key14: value23
      podSelector:
        matchLabels:
          key4: value4
          key6: value7
